--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@mui/base": "^5.0.0-beta.61",
+    "@sequelize/postgres": "^7.0.0-alpha.46",
     "axios": "^1.7.7",
     "framer-motion": "^11.12.0"
   }
