--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "pluralize": "^8.0.0",
     "sequelize": "^6.37.4",
     "sqlite": "^5.1.1",
