--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/base": "^5.0.0-beta.61",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "axios": "^1.7.7",
-    "framer-motion": "^11.12.0"
+    "framer-motion": "^11.12.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4"
   }
 }
