[feature] Update backend for ECS deployment

--- a/backend/config.env
+++ b/backend/config.env
@@ -10,11 +10,10 @@ STRIPE_SECRET_KEY=sk_test_51QKrdqGEJA9Rf1JimQCo9hQMtbsq5n8MkzJxIs0r8HGWYepWTW1re
 NODE_ENV=development
 
 # postgres database
-# change to a fixed IP address if running locally outside of docker
-DB_HOST=host.docker.internal
+DB_HOST=makerspace-management-db.cp0c26e22rvg.us-west-2.rds.amazonaws.com
 # default port for PostgreSQL
 DB_PORT=5432
 # parameters for the database connection
-DB_NAME=mmp-db
-DB_USER=dbuser
-DB_PASSWORD=dummy_pwd
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=xxxxxxxx
